--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,23 @@
 {
     "manifest_version": 3,
-    "name": "Tab Group Viewer",
+    "name": "TabMate",
     "version": "1.0",
-    "description": "Displays a visual overview of all tab groups",
+    "description": "A beautiful and organized tab management extension",
     "permissions": ["tabs", "tabGroups", "activeTab", "storage"],
     "host_permissions": ["http://*/*", "https://*/*"],
     "background": {
-      "service_worker": "background.js"
+      "service_worker": "background.js",
+      "type": "module"
     },
     "action": {
-      "default_popup": "popup.html",
-      "default_title": "View Tab Groups"
+      "default_title": "TabMate"
     },
     "chrome_url_overrides": {
       "newtab": "tab-groups.html"
-    }
+    },
+    "web_accessible_resources": [{
+        "resources": ["css/*", "js/*"],
+        "matches": ["<all_urls>"]
+    }]
   }
   
